# robotics-pacific-rim

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README_EN.md  README_ZH.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build-all.sh  deploy-all.sh  nx.json  package-lock.json  package.json  pr-cmd-all.md  restart-dashboard.sh  setup.sh  tsconfig.base.json
.github/workflows/: ci.yml
.skill/imu_service/: SKILL.md
.skill/middleware_pub_test_service/: SKILL.md
.skill/middleware_rpc_client_test_service/: SKILL.md
.skill/middleware_rpc_server_test_service/: SKILL.md
.skill/middleware_sub_test_service/: SKILL.md
.skill/pr-commands/: SKILL.md
.skill/robot_full_stack/: SKILL.md
dashboard/: README.md  biome.json  bts.jsonc  package-lock.json  package.json  skills-lock.json
dashboard/.husky/: pre-commit
deploy/: README.md
deploy/kubernetes/: README.md  project.json
deploy/local/: README.md  platform.yaml  project.json
deploy/robot-profiles/: AGENTS.md  README.md  biped-reference.json  four-wheel-reference.json  humanoid-reference.json  project.json  pure-driver-sample.json  tracked-reference.json
deploy/ros2/: install-vision-stack.sh  python-runtime-requirements.txt
deploy/sim2real/: NOTE.md
doc/: README.md  communication-message-security.md  new_module_pr_workflow.md  project.json
docs/: OPEN_SOURCE_CHECKLIST.md
example/: README.md  project.json
image/: push-to-harbor.sh
infra/: README.md  go.mod  go.sum
infra/log/: README.md  (+2 more)
infra/protocol/: README.md  package.xml  project.json  setup.py
infra/protocol/cpp/include/pacific_rim/protocol/: codec.hpp
infra/protocol/cpp/include/pacific_rim/protocol/encodings/: base.hpp  cdr.hpp
infra/protocol/cpp/include/pacific_rim/protocol/formats/: base.hpp  cdr.hpp  protobuf.hpp  ros2.hpp
infra/protocol/go/codec/: codec.go  codec_test.go  formats.go
infra/protocol/go/codec/encodings/: base.go  cdr.go
infra/protocol/go/codec/formats/: base.go  cdr.go  protobuf.go  ros2.go
infra/protocol/python/pacific_rim_protocol/: __init__.py  codec.py  envelope.py  test_codec.py  test_envelope.py
infra/protocol/python/pacific_rim_protocol/encodings/: __init__.py  base.py  cdr.py
infra/protocol/python/pacific_rim_protocol/formats/: __init__.py  base.py  cdr.py  protobuf.py  ros2.py
module/: README.md
module/service/imu_service/: AGENTS.md  CMakeLists.txt  README.md  package.xml  project.json
module/service/imu_service/config/: config.yaml  params.yaml
module/service/imu_service/launch/: imu.launch.py
module/service/imu_service/src/: interface_scaffold_README.md  node.cpp
module/service/imu_service/src/api/handler/: README.md
module/service/imu_service/src/runtime/ros2/: README.md  generated_interface_registry.hpp
module/service/imu_service/src/service/: README.md
module/service/imu_service/tools/: generate-interfaces.sh
module/service/middleware_pub_test_service/: AGENTS.md  CMakeLists.txt  README.md  go.mod  go.sum  interface_scaffold_README.md  package.xml  project.json
module/service/middleware_pub_test_service/cmd/middleware_pub_test/: main.go
module/service/middleware_pub_test_service/config/: config.yaml  params.yaml
module/service/middleware_pub_test_service/launch/: middleware_pub_test.launch.py
module/service/middleware_pub_test_service/tools/: generate-interfaces.sh
module/service/middleware_rpc_client_test_service/: AGENTS.md  CMakeLists.txt  README.md  package.xml  project.json
module/service/middleware_rpc_client_test_service/config/: config.yaml  params.yaml
module/service/middleware_rpc_client_test_service/launch/: middleware_rpc_client_test.launch.py
module/service/middleware_rpc_client_test_service/src/: interface_scaffold_README.md  node.cpp
module/service/middleware_rpc_client_test_service/src/runtime/ros2/: generated_interface_registry.hpp
module/service/middleware_rpc_client_test_service/src/service/: README.md
module/service/middleware_rpc_client_test_service/tools/: generate-interfaces.sh
module/service/middleware_rpc_server_test_service/: AGENTS.md  CMakeLists.txt  README.md  go.mod  interface_scaffold_README.md  package.xml  project.json
module/service/middleware_rpc_server_test_service/cmd/middleware_rpc_server_test/: main.go
module/service/middleware_rpc_server_test_service/config/: config.yaml  params.yaml
module/service/middleware_rpc_server_test_service/internal/api/: README.md
module/service/middleware_rpc_server_test_service/internal/service/: service.go
module/service/middleware_rpc_server_test_service/launch/: middleware_rpc_server_test.launch.py
module/service/middleware_rpc_server_test_service/tools/: generate-interfaces.sh
module/service/middleware_sub_test_service/: AGENTS.md  README.md  interface_scaffold_README.md  package.xml  project.json  setup.cfg  setup.py
module/service/middleware_sub_test_service/config/: config.yaml  params.yaml
module/service/middleware_sub_test_service/launch/: middleware_sub_test.launch.py
module/service/middleware_sub_test_service/middleware_sub_test/: node.py
module/service/middleware_sub_test_service/middleware_sub_test/api/: README.md
module/service/middleware_sub_test_service/middleware_sub_test/service/: README.md
module/service/middleware_sub_test_service/tools/: generate-interfaces.sh
pkg/: README.md
scripts/: fetch-onnxruntime.sh  ros2-docker.sh  test-dds-idl-typed-runtime.py  test-dds-native-matrix.py  test-nats-native-matrix.py  test-nats-true-link.sh  test-ros2-native-typed-matrix.py  test-ros2-proto-envelope-nested-rpc.sh  test-ros2-rmw-msg-srv-go-matrix.py
test/: README.md  all-script-lock-contract.test.mjs  dockerfile-compose-contract.test.mjs  docs-contract.test.mjs  pr-command-contract.test.mjs  robot-profile-contract.test.mjs  ros2-docker-expanded-matrix.test.mjs  ros2-docker-help-contract.test.mjs  ros2-docker-local-command-contract.test.mjs  ros2-docker-matrix.test.mjs  ros2-run-contract.test.mjs  run.mjs  scaffold-contract.test.mjs  static-source-contract.test.mjs  vision-stack-contract.test.mjs
(+230 files in other folders)
