<?xml version="1.0"?>
<package format="3">
  <name>pacific_rim_protocol_infra</name>
  <version>0.1.0</version>
  <description>Transport-neutral protocol codecs and schema helpers for Pacific-Rim modules.</description>
  <maintainer email="dev@example.com">Pacific-Rim Developers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
