<?xml version="1.0"?>
<package format="3">
  <name>imu</name>
  <version>0.1.0</version>
  <description>Imu ROS2 C++ module.</description>
  <!-- ROS 2 distribution: humble -->
  <maintainer email="dev@example.com">Pacific-Rim Developers</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <exec_depend>rmw_cyclonedds_cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
