<?xml version="1.0"?>
<package format="3">
  <name>middleware_rpc_server_test</name>
  <version>0.1.0</version>
  <description>Middleware Rpc Server Test ROS2 Go module.</description>
  <!-- ROS 2 distribution: humble -->
  <maintainer email="dev@example.com">Pacific-Rim Developers</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
