<?xml version="1.0"?>
<package format="3">
  <name>middleware_sub_test</name>
  <version>0.1.0</version>
  <description>Middleware Sub Test ROS2 Python module.</description>
  <!-- ROS 2 distribution: humble -->
  <maintainer email="dev@example.com">Pacific-Rim Developers</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
